# gaudi

./: .gitignore  Cargo.toml  build.rs
src/: action_runner.rs  api.rs  blob.rs  content_storage.rs  execution_runner.rs  main.rs  sandboxed_action.rs
src/action/platform/linux/: mod.rs
src/services/: action_cache.rs  bytestream.rs  capabilities.rs  content_storage.rs  execution.rs  mod.rs  operations.rs
test_env/: .bazelrc
test_env/lib/: hello-time.cc
