[package]
name = "gaudi"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["fs", "macros", "rt-multi-thread", "io-util"] }
prost-types = "0.11.5"
tokio-stream = "0.1.11"
async-stream = "0.3.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
clap = { version = "4.0.32", features = ["derive"] }
thiserror = "1.0.38"
libc = "0.2.139"
openat2 = "0.1.2"
# tracing-test = "0.2.3"
walkdir = "2.3.2"
futures = "0.3.25"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
tonic-build = "0.8"
